pod/main/static/css/pod.css
/*** Esup Pod main CSS ***/

:root {
  /* COMMON COLORS */
  --color-black: #000;
  --color-black-alpha: rgb(0 0 0 / 60%);
  --color-alto: #ddd;
  --color-silver: #ccc;
  --color-silver-chalice: #aaa;

  /***
   *  exemple vert 'univ-lille.fr' 2022
   ***/

  /*** Theme primary color ***/
  --pod-primary: #1f7c85;
  --pod-primary-rgb: 31, 124, 133;

  /* a light variant of primary color, used for button hover */
  --pod-primary-lighten: #08b0a0;

  /* a dark variant of primary color, used for active links and disabled buttons */
  --pod-primary-darken: #18575d;

  /* les valeurs '...-dark' ci-dessous sont pour le mode sombre. */
  --pod-primary-dark: #1f7c85;
  --pod-primary-lighten-dark: #08b0a0;
  --pod-primary-lighten-dark-rgb: 8, 176, 160;
  --pod-primary-darken-dark: #18575d;

  /***
   * Esup-Pod default colors
   ***/

  /*** couleur de fond du site ***/
  --pod-background: #fff;
  --pod-background-dark: #222831;

  /*** couleur du texte des boutons principaux ***/
  --pod-btn-text: #fff;
  --pod-btn-text-dark: #fff;

  /**** couleur de police ****/
  --pod-font-color: #000;
  --pod-font-color-dark: #f8f9fa;

  /**** couleur neutre pour fond de bloc (ex jumbotron) ***/
  --pod-background-neutre1-bloc: #ddd;
  --pod-background-neutre1-bloc-dark: #393e46;
  --pod-background-neutre1-bloc-hover: #e5f1fa;

  /**** couleur neutre 2 pour fond de bloc ***/
  --pod-background-neutre2-bloc: #f5f5f5;
  --pod-background-neutre2-bloc-dark: #161c26;

  /**** couleur des liens *****/
  --pod-link-color: var(--pod-primary);
  --pod-link-color-rgb: var(--pod-primary-rgb);
  --pod-activelink-color: var(--pod-primary-darken);

  /* couleur d'un élément actif (ex. : survol de bouton) */
  --pod-primary-focus: var(--pod-primary-darken);

  /* Couleur d'alerte */
  --pod-alert: #fc8670;
  --pod-alert-dark: #b11030;

  /* Tag cloud colors */
  --pod-tag-color1: 16, 131, 22;
  --pod-tag-color2: 51, 51, 170;
  --pod-tag-color3: 197, 53, 143;

  /**** font family ****/

  /* For better accessibility, avoid fonts where [1, i, L] or [O, 0] are the same. */
  --bs-body-font-family: "Verdana", sans-serif;
  --bs-body-font-size: 11pt;
  --pod-font-family-dyslexie: "Open Dyslexic";

  font-size: var(--bs-body-font-size);

  /* BOOTSTRAP COLORS */
  --bs-primary-rgb: var(--pod-primary-rgb);
  --bs-light: #f8f9fa;
  --bs-dark: #343a40;
  --bs-link-color: var(--pod-link-color);
  --bs-link-color-rgb: var(--pod-link-color-rgb);
  --bs-link-hover-color: var(--pod-activelink-color);
  --bs-card-color: var(--pod-font-color);

  /* better contrast on sidebar background */
  --bs-danger: #dc2028;

  /* better contrasts */
  --bs-border-color: #8e969d;
  --bs-orange: #c85208;

  /* Use system font (faster load) */
  --font-family-sans-serif:
    -apple-system, system-ui, "BlinkMacSystemFont", "Segoe UI", "Roboto",
    "Verdana", sans-serif;

  /** reinit before cleaning all old css vars ***/
  --primary-background-color: var(--pod-background-neutre1-bloc) !important;
  --third-background-color: var(--pod-background-neutre1-bloc) !important;
}

.progress,
.progress-stacked {
  --bs-progress-bar-bg: var(--pod-primary);
}

:root[data-dyslexia="on"] {
  --bs-body-font-family: var(--pod-font-family-dyslexie);
}

/* copy "alert-danger" style from Bootstrap 4 */
.alert-error {
  background-color: #f8d7da;
  border-color: #f5c6cb;
  color: #721c24;
}

tr,
.rowl {
  display: table-row !important;
}

.table-hover tbody tr {
  transition: background-color 0.5s;
}

.navbar-light .navbar-brand:focus,
.navbar-light .navbar-brand:hover {
  transition:
    background-color 0.3s ease-in-out,
    color 0.3s ease-in-out;
  color: var(--color-black);
}

.pod-nav-link-icon,
.pod-add {
  font-size: 120%;
}

.bg-light {
  background-color: var(--bs-light) !important;
}

.tab-title {
  font-size: 1.5rem;
}

.pod-meta-title {
  font-size: 85%;
}

.pod-meta-title + ul {
  display: inline-block;
}

.pod-meta-title-additional-owners {
  vertical-align: top;
}

.title-chaine > a {
  margin-left: 0.5em;
  margin-right: 0.5em;
}

/** TAGs Cloud */
.tag-cloud {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-evenly;
}

.tag-cloud > a {
  line-height: 1.5;
}

.tag-cloud > *:nth-child(2n + 1) {
  --bs-link-color-rgb: var(--pod-tag-color1);
}
.tag-cloud > *:nth-child(3n + 1) {
  --bs-link-color-rgb: var(--pod-tag-color2);
}
.tag-cloud > *:nth-child(4n + 1) {
  --bs-link-color-rgb: var(--pod-tag-color3);
}

.tag-1 {
  font-size: 1em;
}
.tag-2 {
  font-size: 1.1em;
}
.tag-3 {
  font-size: 1.2em;
}
.tag-4 {
  font-size: 1.3em;
}
.tag-5 {
  font-size: 1.4em;
}
.tag-6 {
  font-size: 1.5em;
}

.pod-card--video a:not(.btn) {
  color: inherit;
}

a:not(.btn, .dropdown-item):hover,
a:not(.btn, .dropdown-item):focus {
  color: var(--pod-activelink-color);
  text-decoration: underline;
}

.btn-link {
  text-decoration: none;
}

.btn-link:hover,
.btn-link:focus,
.nav-link:hover,
.nav-link:focus {
  text-decoration: underline;
}

.btn-outline-primary {
  color: var(--pod-primary);
  border-color: var(--pod-primary);
}

#collapseAside .card > .btn {
  white-space: normal !important;
  word-wrap: break-word;
  word-break: normal;
  padding: 0.5rem;
}

.submit-row a.deletelink {
  height: 35px;
}

.pod-mt-7 {
  margin-top: 3.5rem;
}

.pod-share-fieldset {
  padding: 1.5rem 0;
  border-bottom: 1px solid var(--pod-background-neutre1-bloc);
}

.pod-share-fieldset legend {
  margin-bottom: 1.5rem;
}

.pod-share-draft-icon {
  font-size: 1.5rem;
}

:not(footer) > .pod-btn-social {
  font-size: 2rem;
}

.btn.pod-btn-social {
  color: var(--pod-font-color);

  --bs-btn-hover-color: var(--pod-font-color);
  --bs-btn-active-color: var(--pod-font-color);
}

.pod-btn-social i {
  transition: all 0.2s ease;
}

.pod-btn-social:hover i,
.btn.pod-btn-social:focus-visible i {
  transform: rotate(15deg);
  display: inline-block;
}

.list-group-item {
  background: var(--pod-background);
  padding: 0.25rem 1.25rem;
}
/* ... */

